WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265341
[WebGPU] 'alias' not supported (
https://www.w3.org/TR/WGSL/#type-aliases
) / error compiling shader opening
https://playground.babylonjs.com/#N96NXC#106
https://bugs.webkit.org/show_bug.cgi?id=265341
Summary
[WebGPU] 'alias' not supported (https://www.w3.org/TR/WGSL/#type-aliases) / e...
Mike Wyrzykowski
Reported
2023-11-25 18:52:17 PST
Created
attachment 468754
[details]
WGSL source generating error [WebGPU] Error compiling shader opening
https://playground.babylonjs.com/#N96NXC#106
(select 'WebGPU' from the top-right if not already selected) It is due to 'alias' not being supported. 'alias' appears to be essentially like 'using' in C++
https://www.w3.org/TR/WGSL/#type-aliases
WGSL source attached.
Attachments
WGSL source generating error
(1.41 KB, text/plain)
2023-11-25 18:52 PST
,
Mike Wyrzykowski
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-11-25 18:52:32 PST
<
rdar://problem/118796398
>
Tadeu Zagallo
Comment 2
2023-12-08 09:28:28 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21509
EWS
Comment 3
2023-12-11 07:44:52 PST
Committed
271876@main
(81d65a5b16f3): <
https://commits.webkit.org/271876@main
> Reviewed commits have been landed. Closing PR #21509 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug