[WebGPU] 'alias' not supported (https://www.w3.org/TR/WGSL/#type-aliases) / error compiling shader opening https://playground.babylonjs.com/#N96NXC#106 https://bugs.webkit.org/show_bug.cgi?id=265341 rdar://118796398

Reviewed by Mike Wyrzykowski.

Add support for user-defined type aliases.

* Source/WebGPU/WGSL/AST/AST.h:
* Source/WebGPU/WGSL/AST/ASTStringDumper.cpp:
(WGSL::AST::StringDumper::visit):
* Source/WebGPU/WGSL/AST/ASTStringDumper.h:
* Source/WebGPU/WGSL/AST/ASTTypeAlias.h: Added.
* Source/WebGPU/WGSL/AST/ASTVisitor.cpp:
(WGSL::AST::Visitor::visit):
* Source/WebGPU/WGSL/AST/ASTVisitor.h:
* Source/WebGPU/WGSL/Parser.cpp:
(WGSL::Parser<Lexer>::parseDeclaration):
(WGSL::Parser<Lexer>::parseTypeAlias):
* Source/WebGPU/WGSL/ParserPrivate.h:
* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):
* Source/WebGPU/WGSL/tests/valid/aliases.wgsl:
* Source/WebGPU/WebGPU.xcodeproj/project.pbxproj:

Canonical link: https://commits.webkit.org/271876@main